syntax = "proto3";

option csharp_namespace = "GrpcFileService";

package infra.directory.v1;

service DirectoryTransfer {
  rpc CreateDirectory (CreateDirectoryRequest) returns (CreateDirectoryResponse);
  rpc IsExistDirectory (IsExistDirectoryRequest) returns (IsExistDirectoryResponse);
  rpc GetFiles (GetFilesRequest) returns (GetFilesResponse);
  rpc DeleteDirectory (DeleteDirectoryRequest) returns (DeleteDirectoryResponse);
  rpc GetSubDirectories (GetSubDirectoriesRequest) returns (GetSubDirectoriesResponse);
  rpc DirectoryCompress (DirectoryCompressRequest) returns (DirectoryCompressResponse);
}

message CreateDirectoryRequest {
  string directory_name = 1;
  string mark = 2;
}

message CreateDirectoryResponse {
  string mark = 1;
}

message IsExistDirectoryRequest {
  string directory_name = 1;
  string mark = 2;
}

message IsExistDirectoryResponse {
  bool status = 1;
  string mark = 2;
}

message GetFilesRequest {
  string directory_name = 1;
  string search_pattern = 2;
  string search_option = 3;
  string mark = 4;
}

message GetFilesResponse {
  repeated string file_names = 1;
  string mark = 2;
}

message DeleteDirectoryRequest {
  string directory_name = 1;
  bool recursive = 2;
  string mark = 3;
}

message DeleteDirectoryResponse {
  string mark = 1;
}

message GetSubDirectoriesRequest {
  string directory_name = 1;
  string search_pattern = 2;
  string search_option = 3;
  string mark = 4;
}

message GetSubDirectoriesResponse {
  repeated string directory_names = 1;
  string mark = 2;
}

message DirectoryCompressRequest {
  string directory_name = 1;
  string zip_file_name = 2;
  int32 compression_level = 3;
  string mark = 4;
}

message DirectoryCompressResponse {
  string mark = 1;
}
